# master_compiler_course

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: cmake-single-platform.yml
cmake/: CPM.cmake  flags.cmake  upd_list.cmake
include/: basic_block.hh  graph.hh  inst.hh  instr.hh  instrusive_list.hh  ir.hh  opcodes.hh
include/IR/: README.md  basic_block.hh  function.hh  instruction.hh  instructions.hh  ir.hh  ir_builder.hh  opcodes.hh
include/analysis/: linear_order.hh  liveness_analyzer.hh  loop_analyzer.hh  loop_base.hh  reg_alloc.hh
include/graph/: bb_graph.hh  dfs.hh  dom3.hh  dom3_base.hh  dsu.hh  example1.dot
include/intrusive_list/: ilist.hh  ilist_base.hh  ilist_iterator.hh  ilist_node.hh
include/opt_passes/: checks_elimination.hh  constant_fold.hh  inlining.hh  pass_manager.hh  pass_visitor.hh  peephole.hh
src/: CMakeLists.txt
src/basic_block/: CMakeLists.txt  basic_block.cc
src/graph/: CMakeLists.txt  graph.cc
src/inst/: CMakeLists.txt  inst.cc
src/instr/: CMakeLists.txt  instr.cc
src/ir/: CMakeLists.txt
test/unit/: CMakeLists.txt
test/unit/init/: CMakeLists.txt  init.cc
test/unit/intrusive_list/: CMakeLists.txt
tests/unit/: CMakeLists.txt
tests/unit/IR/: CMakeLists.txt  IR.cc
tests/unit/analysis/: CMakeLists.txt  liveness_analyzer.cc  loop_analyzer.cc  order_analyzer.cc  order_test.dot  reg_alloc_analyzer.cc
tests/unit/basic_block/: CMakeLists.txt  basic_block.cc
tests/unit/graph/: CMakeLists.txt  builder.hh  dfs.cc  dom3.cc
tests/unit/intrusive_list/: CMakeLists.txt  instrusive_list.cc
tests/unit/opt_passes/: CMakeLists.txt  checks_elimination.cc  constant_fold.cc  inlining.cc  peephole.cc
